# loopy

./: #TODO  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SETTINGS.md  SYSTEM.md  config.sample.md  docker-compose.yml  package.json  pyproject.toml  settings.reference.json
agents/: _template.md  alfred.md  critics.md  execs.md  producers.md  qas.md  securities.md  users.md
daemons/: auto-approve.sh  bus_broker.py  common.sh  slack_parser.py  slack_poller.py  slack_writer.py  start-bus.sh  token_refresh.py  watchdog.sh
mcp/: _common.py  inbox.py  registry.py  tmux.py
operator/: _write-panes.sh  attach.sh  chat.sh  detach.sh  docker-start.sh  docker-status.sh  forever.sh  init.sh  install-daemon.sh  launch-all.sh  launch-headless.sh  launch-procs.sh  plist-gen.sh  restart-bus.sh  setup-ide.sh  start.sh  status.sh  stop-all.sh  stop-auto-approve.sh  watchdog-headless.sh
protocol/: PROTOCOL.md  RULES.md  SOUL.md  agent-loop.md  architecture.md  memory.md  parallelism.md  recovery.md  sandbox.md  structure.md
scripts/: agent-tool.py  agent-wrapper.sh  capacity-check.py  check-agents.sh  check-round.sh  doctor.sh  generate-compose.sh  hot-files-check.sh  install-hooks.sh  install.sh  preflight-credentials.sh  regenerate-canary.py  scan-project.py  verify-canary.py  verify-credentials.py
skills/: REGISTRY.md
tests/: conftest.py  test_bus.py  test_bus_broker_async.py  test_bus_unit.py  test_canary.py  test_cli.py  test_cli_more.py  test_credentials.py  test_discovery_mcp.py  test_edges.py  test_file_ops.py  (+17 more)
(+43 files in other folders)
